drop unwanted observations from WB upload

--- a/Utilities/Working with Dates.ipynb
+++ b/Utilities/Working with Dates.ipynb
@@ -153,7 +153,7 @@
     "\n",
     "def fix_datetime_UTC(data_df, dttm_elems_in_sep_columns=True, \n",
     "                     dttm_elems={},\n",
-    "                     dttm_col=None, \n",
+    "                     dttm_columnz=None, \n",
     "                     dttm_pattern=\"%Y-%m-%dT%H:%M:%SZ\"):\n",
     "    \"\"\"\n",
     "    Desired datetime format: 2017-12-08T15:16:03Z\n",
@@ -179,7 +179,7 @@
     "    # and either a date, time, or datetime object\n",
     "    if dttm_elems_in_sep_columns:\n",
     "        assert(type(dttm_elems)==dict)\n",
-    "        assert(dttm_col==None)\n",
+    "        assert(dttm_columnz==None)\n",
     "        \n",
     "        tmp = data_df.copy()\n",
     "        if \"year_col\" not in dttm_elems:\n",
@@ -200,10 +200,24 @@
     "        dttm_col = tmp.apply(lambda row: structure_dttm_from_parts(row, dttm_elems, dttm_pattern), axis=1)\n",
     "        \n",
     "    else:\n",
-    "        # Need to provide the default parameter to parser.parse so that missing entries don't default to current date\n",
-    "        dttm_col = data_df.apply(lambda row: parser.parse(row[dttm_col], default=default_date).strftime(dttm_pattern), axis=1)\n",
-    "    \n",
-    "    return(dttm_col)"
+    "        # Make sure it is possible to treat dttm_columnz as a list\n",
+    "        assert(dttm_columnz!=None)\n",
+    "        if type(dttm_columnz) != list:\n",
+    "            assert(type(dttm_columns) in [str, int, float])\n",
+    "            dttm_columnz = list(dttm_columnz)\n",
+    "            \n",
+    "        # No matter what, this runs over a Series, and thus you don't have to set axis=1\n",
+    "        if len(dttm_columnz)>1:\n",
+    "            # Need to provide the default parameter to parser.parse so that missing entries don't default to current date\n",
+    "            dttm_col = data_df[dttm_columns].apply(lambda row: parser.parse(row[dttm_col], default=default_date).strftime(dttm_pattern))\n",
+    "        else:\n",
+    "            # pack together then send through apply\n",
+    "            dttm_contents = data_df[dttm_columnz[0]]\n",
+    "            for col in dttm_columns[1:]:\n",
+    "                dttm_contents = dttm_contents + \" \" + data_df[col]\n",
+    "            dttm_col = dttm_contents.apply(lambda dttm: parser.parse(dttm, default=default_date).strftime(dttm_pattern)\n",
+    "    return(dttm_col)\n",
+    "\n"
    ]
   },
   {
