found out that the problem is in formatting the system:time_start... must be in milliseconds since last UNIX epoch

--- a/Raster Dataset Processing/Handling NetCDF.ipynb
+++ b/Raster Dataset Processing/Handling NetCDF.ipynb
@@ -72,8 +72,8 @@
        "    institution: NASA Goddard Institute for Space Studies\n",
        "    source: http://data.giss.nasa.gov/gistemp/\n",
        "    Conventions: CF-1.6\n",
-       "    history: Created 2017-11-14 09:42:33 by SBBX_to_nc 2.0 - ILAND=250,  IOCEAN=none,     Base: 1951-1980\n",
-       "    dimensions(sizes): lat(90), lon(180), time(1654), nv(2)\n",
+       "    history: Created 2017-12-13 09:40:43 by SBBX_to_nc 2.0 - ILAND=250,  IOCEAN=none,     Base: 1951-1980\n",
+       "    dimensions(sizes): lat(90), lon(180), time(1655), nv(2)\n",
        "    variables(dimensions): float32 \u001b[4mlat\u001b[0m(lat), float32 \u001b[4mlon\u001b[0m(lon), int32 \u001b[4mtime\u001b[0m(time), int32 \u001b[4mtime_bnds\u001b[0m(time,nv), int16 \u001b[4mtempanomaly\u001b[0m(time,lat,lon)\n",
        "    groups: "
       ]
@@ -111,7 +111,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "32767"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp250[\"tempanomaly\"].getncattr(\"_FillValue\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -123,11 +145,98 @@
       "['long_name', 'units', 'bounds']\n",
       "days since 1800-01-01 00:00:00\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(1800, 1, 1, 0, 0)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "print(temp250.variables[\"time\"].ncattrs())\n",
-    "print(temp250.variables[\"time\"].getncattr('units'))"
+    "print(temp250.variables[\"time\"].getncattr('units'))\n",
+    "\n",
+    "time_values = temp250[\"time\"]\n",
+    "time_units = time_values.getncattr('units')\n",
+    "time_units\n",
+    "\n",
+    "from dateutil import parser\n",
+    "parser.parse(time_units, fuzzy=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['2017-02-15T00:00:00Z', '2017-03-15T00:00:00Z', '2017-04-15T00:00:00Z', '2017-05-15T00:00:00Z', '2017-06-15T00:00:00Z', '2017-07-15T00:00:00Z', '2017-08-15T00:00:00Z', '2017-09-15T00:00:00Z', '2017-10-15T00:00:00Z', '2017-11-15T00:00:00Z']\n",
+      "[79303 79331 79362 79392 79423 79453 79484 79515 79545 79576]\n",
+      "\n",
+      "['1880-01-15T00:00:00Z', '1880-02-15T00:00:00Z', '1880-03-15T00:00:00Z', '1880-04-15T00:00:00Z', '1880-05-15T00:00:00Z', '1880-06-15T00:00:00Z', '1880-07-15T00:00:00Z', '1880-08-15T00:00:00Z', '1880-09-15T00:00:00Z', '1880-10-15T00:00:00Z']\n",
+      "[29233 29264 29293 29324 29354 29385 29415 29446 29477 29507]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import logging \n",
+    "nc = temp250\n",
+    "time_var_name = \"time\"\n",
+    "import datetime\n",
+    "from dateutil import parser\n",
+    "\n",
+    "def create_formatted_dates(ref_time, time_displacements, date_pattern=\"%Y-%m-%dT%H:%M:%SZ\"):\n",
+    "    \"\"\"\n",
+    "    Inputs:\n",
+    "    * ref_time in datetime.datetime format\n",
+    "    * list of time values corresponding to data in the nc file\n",
+    "    ** time values are expressed in days since the ref_time\n",
+    "    Outputs:\n",
+    "    * list of strings in desired date_pattern\n",
+    "    \"\"\"\n",
+    "    formatted_dates = [(ref_time + datetime.timedelta(days=int(time_disp))).strftime(date_pattern) for time_disp in time_displacements]\n",
+    "    return(formatted_dates)\n",
+    "\n",
+    "# Extract time variable range\n",
+    "time_displacements = nc[time_var_name]\n",
+    "num_time_steps = len(time_displacements)\n",
+    "logging.info(num_time_steps)\n",
+    "\n",
+    "# Identify time units\n",
+    "# fuzzy=True allows the parser to pick the date out from a string with other text\n",
+    "time_units = time_displacements.getncattr('units')\n",
+    "logging.info(time_units)\n",
+    "ref_time = parser.parse(time_units, fuzzy=True)\n",
+    "logging.info(ref_time)\n",
+    "\n",
+    "# Create dates ready for tif names\n",
+    "formatted_dates = create_formatted_dates(ref_time, time_displacements)\n",
+    "print(formatted_dates[-10:])\n",
+    "print(time_displacements[-10:])\n",
+    "print()\n",
+    "print(formatted_dates[:10])\n",
+    "print(time_displacements[:10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "??datetime.timedelta"
    ]
   },
   {
