added in function for processing dates for GEE, begun uploading assets to GEE

--- a/Raster Dataset Processing/Handling NetCDF.ipynb
+++ b/Raster Dataset Processing/Handling NetCDF.ipynb
@@ -133,6 +133,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<class 'netCDF4._netCDF4.Variable'>\n",
+       "int32 time(time)\n",
+       "    long_name: time\n",
+       "    units: days since 1800-01-01 00:00:00\n",
+       "    bounds: time_bnds\n",
+       "unlimited dimensions: \n",
+       "current shape = (1655,)\n",
+       "filling off"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp250[\"time\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 23,
    "metadata": {
     "collapsed": false
