--- a/Utilities/Working with Dates.ipynb
+++ b/Utilities/Working with Dates.ipynb
@@ -443,6 +443,40 @@
     "print(fix_datetime_UTC(df, date_columns=[\"Month\", \"Day\"]))\n",
     "print(fix_datetime_UTC(df, date_columns=[\"Day\", \"Month\"]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def format_time_for_gee(time_start, time_end, orig_date_pattern=\"%Y-%m-%d\"):\n",
+    "    \"\"\"\n",
+    "    Inputs: some times as strings, and a date_pattern they correspond to\n",
+    "    Outputs: those times as UNIX time\n",
+    "    \"\"\"\n",
+    "    # Set epoch to measure against\n",
+    "    epoch = datetime.datetime.utcfromtimestamp(0)\n",
+    "    # Convert time_start and time_end to UTC... not clear what their original time zone was\n",
+    "    time_start = time_start\n",
+    "    time_start = time_start\n",
+    "    \n",
+    "    # Convert the difference of time_start and time_end from the last epoch to milliseconds\n",
+    "    time_start = (datetime.datetime.strptime(time_start, orig_date_pattern)-epoch).total_seconds()*1000.0\n",
+    "    time_end = (datetime.datetime.strptime(time_end, orig_date_pattern)-epoch).total_seconds()*1000.0\n",
+    "    \n",
+    "    return(time_start, time_end)\n",
+    "\n",
+    "time_start = \"1975-01-01\"\n",
+    "time_end = \"1976-01-01\"\n",
+    "time_start, time_end = format_time_for_gee(time_start, time_end)\n",
+    "\n",
+    "# Have to include utcfromtimestamp, not fromtimestamp\n",
+    "print(datetime.datetime.utcfromtimestamp(time_start/1000.0))\n",
+    "print(datetime.datetime.utcfromtimestamp(time_end/1000.0))"
+   ]
   }
  ],
  "metadata": {
