transfer code back to Docker file structure

--- a/Raster Dataset Processing/Raster Prep Notebooks/cli_035 surface temp analysis.ipynb
+++ b/Raster Dataset Processing/Raster Prep Notebooks/cli_035 surface temp analysis.ipynb
@@ -1777,7 +1777,172 @@
       "INFO:root:GEE asset upload started for users/resourcewatch/cli_035_surface_temp_analysis/cli_035_surface_temp_analysis_1881-08-15\n",
       "INFO:root:Check back to ensure ACL is set to public before attempting to connect to the back office\n",
       "INFO:root:b''\n",
-      "INFO:root:cli_035_surface_temp_analysis_1881-09-15_.tif up on google storage\n"
+      "INFO:root:cli_035_surface_temp_analysis_1881-09-15_.tif up on google storage\n",
+      "INFO:root:b'Started upload task with ID: Q3TTGND7TQELYIWBOXSQARVA\\n'\n",
+      "INFO:root:GEE asset upload started for users/resourcewatch/cli_035_surface_temp_analysis/cli_035_surface_temp_analysis_1881-09-15\n",
+      "INFO:root:Check back to ensure ACL is set to public before attempting to connect to the back office\n",
+      "INFO:root:b''\n",
+      "INFO:root:cli_035_surface_temp_analysis_1881-10-15_.tif up on google storage\n",
+      "INFO:root:b'Started upload task with ID: V3OL2F4OGRXP44WYIW4FEEAC\\n'\n",
+      "INFO:root:GEE asset upload started for users/resourcewatch/cli_035_surface_temp_analysis/cli_035_surface_temp_analysis_1881-10-15\n",
+      "INFO:root:Check back to ensure ACL is set to public before attempting to connect to the back office\n",
+      "INFO:root:b''\n",
+      "INFO:root:cli_035_surface_temp_analysis_1881-11-15_.tif up on google storage\n",
+      "INFO:root:b'Started upload task with ID: APDSXVOTRB4ATJJ7GI3GKEV5\\n'\n",
+      "INFO:root:GEE asset upload started for users/resourcewatch/cli_035_surface_temp_analysis/cli_035_surface_temp_analysis_1881-11-15\n",
+      "INFO:root:Check back to ensure ACL is set to public before attempting to connect to the back office\n",
+      "INFO:root:b''\n",
+      "INFO:root:cli_035_surface_temp_analysis_1881-12-15_.tif up on google storage\n",
+      "INFO:root:b'Started upload task with ID: YPBS3F6GDRQ7YGS5B64Q6HVY\\n'\n",
+      "INFO:root:GEE asset upload started for users/resourcewatch/cli_035_surface_temp_analysis/cli_035_surface_temp_analysis_1881-12-15\n",
+      "INFO:root:Check back to ensure ACL is set to public before attempting to connect to the back office\n",
+      "INFO:root:b''\n",
+      "INFO:root:cli_035_surface_temp_analysis_1882-01-15_.tif up on google storage\n",
+      "INFO:root:b'Started upload task with ID: X6233DPDJO4CJ44CMGRPXDC6\\n'\n",
+      "INFO:root:GEE asset upload started for users/resourcewatch/cli_035_surface_temp_analysis/cli_035_surface_temp_analysis_1882-01-15\n",
+      "INFO:root:Check back to ensure ACL is set to public before attempting to connect to the back office\n",
+      "INFO:root:b''\n",
+      "INFO:root:cli_035_surface_temp_analysis_1882-02-15_.tif up on google storage\n",
+      "INFO:root:b'Started upload task with ID: AAGGN4UPZZJBIRODX3SF342H\\n'\n",
+      "INFO:root:GEE asset upload started for users/resourcewatch/cli_035_surface_temp_analysis/cli_035_surface_temp_analysis_1882-02-15\n",
+      "INFO:root:Check back to ensure ACL is set to public before attempting to connect to the back office\n",
+      "INFO:root:b''\n",
+      "INFO:root:cli_035_surface_temp_analysis_1882-03-15_.tif up on google storage\n",
+      "INFO:root:b'Started upload task with ID: SZQBJG27SQMMQIL7O4JGJPED\\n'\n",
+      "INFO:root:GEE asset upload started for users/resourcewatch/cli_035_surface_temp_analysis/cli_035_surface_temp_analysis_1882-03-15\n",
+      "INFO:root:Check back to ensure ACL is set to public before attempting to connect to the back office\n",
+      "INFO:root:b''\n",
+      "INFO:root:cli_035_surface_temp_analysis_1882-04-15_.tif up on google storage\n",
+      "INFO:root:b'Started upload task with ID: CAQR3O5JHIFKN5WAG772FDCF\\n'\n",
+      "INFO:root:GEE asset upload started for users/resourcewatch/cli_035_surface_temp_analysis/cli_035_surface_temp_analysis_1882-04-15\n",
+      "INFO:root:Check back to ensure ACL is set to public before attempting to connect to the back office\n",
+      "INFO:root:b''\n",
+      "INFO:root:cli_035_surface_temp_analysis_1882-05-15_.tif up on google storage\n",
+      "INFO:root:b'Started upload task with ID: 7HP5HMES2UVHWENIX2TQ47T6\\n'\n",
+      "INFO:root:GEE asset upload started for users/resourcewatch/cli_035_surface_temp_analysis/cli_035_surface_temp_analysis_1882-05-15\n",
+      "INFO:root:Check back to ensure ACL is set to public before attempting to connect to the back office\n",
+      "INFO:root:b''\n",
+      "INFO:root:cli_035_surface_temp_analysis_1882-06-15_.tif up on google storage\n",
+      "INFO:root:b'Started upload task with ID: ZVRYE3MDBX5S6Q6RTLL75VN3\\n'\n",
+      "INFO:root:GEE asset upload started for users/resourcewatch/cli_035_surface_temp_analysis/cli_035_surface_temp_analysis_1882-06-15\n",
+      "INFO:root:Check back to ensure ACL is set to public before attempting to connect to the back office\n",
+      "INFO:root:b''\n",
+      "INFO:root:cli_035_surface_temp_analysis_1882-07-15_.tif up on google storage\n",
+      "INFO:root:b'Started upload task with ID: JKSBBITE2JO6UCKFQCITKGJY\\n'\n",
+      "INFO:root:GEE asset upload started for users/resourcewatch/cli_035_surface_temp_analysis/cli_035_surface_temp_analysis_1882-07-15\n",
+      "INFO:root:Check back to ensure ACL is set to public before attempting to connect to the back office\n",
+      "INFO:root:b''\n",
+      "INFO:root:cli_035_surface_temp_analysis_1882-08-15_.tif up on google storage\n",
+      "INFO:root:b'Started upload task with ID: PVBWI4NPUYNN2CMA4LIH3Y36\\n'\n",
+      "INFO:root:GEE asset upload started for users/resourcewatch/cli_035_surface_temp_analysis/cli_035_surface_temp_analysis_1882-08-15\n",
+      "INFO:root:Check back to ensure ACL is set to public before attempting to connect to the back office\n",
+      "INFO:root:b''\n",
+      "INFO:root:cli_035_surface_temp_analysis_1882-09-15_.tif up on google storage\n",
+      "INFO:root:b'Started upload task with ID: VL6TYKJIGQBIIE6XRIQR57UE\\n'\n",
+      "INFO:root:GEE asset upload started for users/resourcewatch/cli_035_surface_temp_analysis/cli_035_surface_temp_analysis_1882-09-15\n",
+      "INFO:root:Check back to ensure ACL is set to public before attempting to connect to the back office\n",
+      "INFO:root:b''\n",
+      "INFO:root:cli_035_surface_temp_analysis_1882-10-15_.tif up on google storage\n",
+      "INFO:root:b'Started upload task with ID: 4A57WAQUW6XWOFVBGW77P6MI\\n'\n",
+      "INFO:root:GEE asset upload started for users/resourcewatch/cli_035_surface_temp_analysis/cli_035_surface_temp_analysis_1882-10-15\n",
+      "INFO:root:Check back to ensure ACL is set to public before attempting to connect to the back office\n",
+      "INFO:root:b''\n",
+      "INFO:root:cli_035_surface_temp_analysis_1882-11-15_.tif up on google storage\n",
+      "INFO:root:b'Started upload task with ID: LJ7KWJN5YLHV3MYFLJRE453M\\n'\n",
+      "INFO:root:GEE asset upload started for users/resourcewatch/cli_035_surface_temp_analysis/cli_035_surface_temp_analysis_1882-11-15\n",
+      "INFO:root:Check back to ensure ACL is set to public before attempting to connect to the back office\n",
+      "INFO:root:b''\n",
+      "INFO:root:cli_035_surface_temp_analysis_1882-12-15_.tif up on google storage\n",
+      "INFO:root:b'Started upload task with ID: SZ6U3U2CX7YV6DNGGHH5MB4B\\n'\n",
+      "INFO:root:GEE asset upload started for users/resourcewatch/cli_035_surface_temp_analysis/cli_035_surface_temp_analysis_1882-12-15\n",
+      "INFO:root:Check back to ensure ACL is set to public before attempting to connect to the back office\n",
+      "INFO:root:b''\n",
+      "INFO:root:cli_035_surface_temp_analysis_1883-01-15_.tif up on google storage\n",
+      "INFO:root:b'Started upload task with ID: GBQIANS54AWIUA572CQVAINU\\n'\n",
+      "INFO:root:GEE asset upload started for users/resourcewatch/cli_035_surface_temp_analysis/cli_035_surface_temp_analysis_1883-01-15\n",
+      "INFO:root:Check back to ensure ACL is set to public before attempting to connect to the back office\n",
+      "INFO:root:b''\n",
+      "INFO:root:cli_035_surface_temp_analysis_1883-02-15_.tif up on google storage\n",
+      "INFO:root:b'Started upload task with ID: WDSR2ZKKSIQSBRRMR7RP2QQY\\n'\n",
+      "INFO:root:GEE asset upload started for users/resourcewatch/cli_035_surface_temp_analysis/cli_035_surface_temp_analysis_1883-02-15\n",
+      "INFO:root:Check back to ensure ACL is set to public before attempting to connect to the back office\n",
+      "INFO:root:b''\n",
+      "INFO:root:cli_035_surface_temp_analysis_1883-03-15_.tif up on google storage\n",
+      "INFO:root:b'Started upload task with ID: XRA5T5HJ2HQBZV5CLUWE5BOU\\n'\n",
+      "INFO:root:GEE asset upload started for users/resourcewatch/cli_035_surface_temp_analysis/cli_035_surface_temp_analysis_1883-03-15\n",
+      "INFO:root:Check back to ensure ACL is set to public before attempting to connect to the back office\n",
+      "INFO:root:b''\n",
+      "INFO:root:cli_035_surface_temp_analysis_1883-04-15_.tif up on google storage\n",
+      "INFO:root:b'Started upload task with ID: 3T7MNRZDXVYRXIILI5QHSFNT\\n'\n",
+      "INFO:root:GEE asset upload started for users/resourcewatch/cli_035_surface_temp_analysis/cli_035_surface_temp_analysis_1883-04-15\n",
+      "INFO:root:Check back to ensure ACL is set to public before attempting to connect to the back office\n",
+      "INFO:root:b''\n",
+      "INFO:root:cli_035_surface_temp_analysis_1883-05-15_.tif up on google storage\n",
+      "INFO:root:b'Started upload task with ID: PGHMSWFBQUANG62DBY43MCHG\\n'\n",
+      "INFO:root:GEE asset upload started for users/resourcewatch/cli_035_surface_temp_analysis/cli_035_surface_temp_analysis_1883-05-15\n",
+      "INFO:root:Check back to ensure ACL is set to public before attempting to connect to the back office\n",
+      "INFO:root:b''\n",
+      "INFO:root:cli_035_surface_temp_analysis_1883-06-15_.tif up on google storage\n",
+      "INFO:root:b'Started upload task with ID: WO6UAMFHXCUC5THJJC676PKW\\n'\n",
+      "INFO:root:GEE asset upload started for users/resourcewatch/cli_035_surface_temp_analysis/cli_035_surface_temp_analysis_1883-06-15\n",
+      "INFO:root:Check back to ensure ACL is set to public before attempting to connect to the back office\n",
+      "INFO:root:b''\n",
+      "INFO:root:cli_035_surface_temp_analysis_1883-07-15_.tif up on google storage\n",
+      "INFO:root:b'Started upload task with ID: P5KPZ3A7OQWYKBJEZKLQEWYT\\n'\n",
+      "INFO:root:GEE asset upload started for users/resourcewatch/cli_035_surface_temp_analysis/cli_035_surface_temp_analysis_1883-07-15\n",
+      "INFO:root:Check back to ensure ACL is set to public before attempting to connect to the back office\n",
+      "INFO:root:b''\n",
+      "INFO:root:cli_035_surface_temp_analysis_1883-08-15_.tif up on google storage\n",
+      "INFO:root:b'Started upload task with ID: UF4QN57SXX6SDGK6YCMHSNPE\\n'\n",
+      "INFO:root:GEE asset upload started for users/resourcewatch/cli_035_surface_temp_analysis/cli_035_surface_temp_analysis_1883-08-15\n",
+      "INFO:root:Check back to ensure ACL is set to public before attempting to connect to the back office\n",
+      "INFO:root:b''\n",
+      "INFO:root:cli_035_surface_temp_analysis_1883-09-15_.tif up on google storage\n",
+      "INFO:root:b'Started upload task with ID: SH26STYFRHFLB4BMRTO2VVDX\\n'\n",
+      "INFO:root:GEE asset upload started for users/resourcewatch/cli_035_surface_temp_analysis/cli_035_surface_temp_analysis_1883-09-15\n",
+      "INFO:root:Check back to ensure ACL is set to public before attempting to connect to the back office\n",
+      "INFO:root:b''\n",
+      "INFO:root:cli_035_surface_temp_analysis_1883-10-15_.tif up on google storage\n",
+      "INFO:root:b'Started upload task with ID: Q5NGHYBFUEUU273SPUZEGCVQ\\n'\n",
+      "INFO:root:GEE asset upload started for users/resourcewatch/cli_035_surface_temp_analysis/cli_035_surface_temp_analysis_1883-10-15\n",
+      "INFO:root:Check back to ensure ACL is set to public before attempting to connect to the back office\n",
+      "INFO:root:b''\n",
+      "INFO:root:cli_035_surface_temp_analysis_1883-11-15_.tif up on google storage\n",
+      "INFO:root:b'Started upload task with ID: EAVY5MGPRBUMW5SF7TEPNCB3\\n'\n",
+      "INFO:root:GEE asset upload started for users/resourcewatch/cli_035_surface_temp_analysis/cli_035_surface_temp_analysis_1883-11-15\n",
+      "INFO:root:Check back to ensure ACL is set to public before attempting to connect to the back office\n",
+      "INFO:root:b''\n",
+      "INFO:root:cli_035_surface_temp_analysis_1883-12-15_.tif up on google storage\n",
+      "INFO:root:b'Started upload task with ID: S7G5ZNAAIBAWV76JOIS3QRZH\\n'\n",
+      "INFO:root:GEE asset upload started for users/resourcewatch/cli_035_surface_temp_analysis/cli_035_surface_temp_analysis_1883-12-15\n",
+      "INFO:root:Check back to ensure ACL is set to public before attempting to connect to the back office\n",
+      "INFO:root:b''\n",
+      "INFO:root:cli_035_surface_temp_analysis_1884-01-15_.tif up on google storage\n",
+      "INFO:root:b'Started upload task with ID: ST2EPFH4VGPSUAJMU4JIHXAE\\n'\n",
+      "INFO:root:GEE asset upload started for users/resourcewatch/cli_035_surface_temp_analysis/cli_035_surface_temp_analysis_1884-01-15\n",
+      "INFO:root:Check back to ensure ACL is set to public before attempting to connect to the back office\n",
+      "INFO:root:b''\n",
+      "INFO:root:cli_035_surface_temp_analysis_1884-02-15_.tif up on google storage\n",
+      "INFO:root:b'Started upload task with ID: HVVOXHVLPVO2WOZOKC54Q3MB\\n'\n",
+      "INFO:root:GEE asset upload started for users/resourcewatch/cli_035_surface_temp_analysis/cli_035_surface_temp_analysis_1884-02-15\n",
+      "INFO:root:Check back to ensure ACL is set to public before attempting to connect to the back office\n",
+      "INFO:root:b''\n",
+      "INFO:root:cli_035_surface_temp_analysis_1884-03-15_.tif up on google storage\n",
+      "INFO:root:b'Started upload task with ID: UAOMSGKQCMF75MDDROE6TYRG\\n'\n",
+      "INFO:root:GEE asset upload started for users/resourcewatch/cli_035_surface_temp_analysis/cli_035_surface_temp_analysis_1884-03-15\n",
+      "INFO:root:Check back to ensure ACL is set to public before attempting to connect to the back office\n",
+      "INFO:root:b''\n",
+      "INFO:root:cli_035_surface_temp_analysis_1884-04-15_.tif up on google storage\n",
+      "INFO:root:b'Started upload task with ID: FCDKOR2C3PWZL23X4OUJ5QHE\\n'\n",
+      "INFO:root:GEE asset upload started for users/resourcewatch/cli_035_surface_temp_analysis/cli_035_surface_temp_analysis_1884-04-15\n",
+      "INFO:root:Check back to ensure ACL is set to public before attempting to connect to the back office\n",
+      "INFO:root:b''\n",
+      "INFO:root:cli_035_surface_temp_analysis_1884-05-15_.tif up on google storage\n",
+      "INFO:root:b'Started upload task with ID: DCJPRECBVO26MGLQMYBLHAGA\\n'\n",
+      "INFO:root:GEE asset upload started for users/resourcewatch/cli_035_surface_temp_analysis/cli_035_surface_temp_analysis_1884-05-15\n",
+      "INFO:root:Check back to ensure ACL is set to public before attempting to connect to the back office\n",
+      "INFO:root:b''\n",
+      "INFO:root:cli_035_surface_temp_analysis_1884-06-15_.tif up on google storage\n"
      ]
     }
    ],
