add in asset_props to process_tif_files_to_cloud funct

--- a/Raster Dataset Processing/Raster Prep Notebooks/cli_035 surface temp analysis.ipynb
+++ b/Raster Dataset Processing/Raster Prep Notebooks/cli_035 surface temp analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 59,
    "metadata": {
     "collapsed": false
    },
@@ -23,7 +23,7 @@
       "INFO:root:b'Asset users/resourcewatch/cli_035_surface_temp_analysis already exists\\n'\n",
       "INFO:root:b''\n",
       "INFO:root:cli_035_surface_temp_analysis_2017-11-15_.tif up on google storage\n",
-      "INFO:root:b'Started upload task with ID: 5SZKMLGLOO3IWIZFDOKVDMEY\\n'\n",
+      "INFO:root:b'Started upload task with ID: ISXOIUTF34TNSNHDBLX6FUXI\\n'\n",
       "INFO:root:GEE asset upload started for users/resourcewatch/cli_035_surface_temp_analysis/cli_035_surface_temp_analysis_2017-11-15\n",
       "INFO:root:Check back to ensure ACL is set to public before attempting to connect to the back office\n",
       "INFO:root:container process finished, container cleaned\n"
@@ -256,12 +256,12 @@
     "    \n",
     "    return(time_start, time_end)\n",
     "    \n",
-    "def process_tif_files_to_cloud(tmpTifFolder, cloud_props, nodata_val):\n",
+    "def process_tif_files_to_cloud(tmpTifFolder, cloud_props, asset_props):\n",
     "    \"\"\"\n",
     "    Inputs:\n",
     "    * folder with tif files to loop over\n",
     "    * cloud_props, which at least contain keys: imageCollection, gs_bucket\n",
-    "    \n",
+    "    * asset_props, which at least contain keys: nodata_val, band_names\n",
     "    Outputs: files in the correct places on gs and gee\n",
     "    \"\"\"\n",
     "    assert(type(cloud_props)==dict)\n",
@@ -275,9 +275,6 @@
     "    tifs = glob.glob(tmpTifFolder + \"*_.tif\")\n",
     "    \n",
     "    for ix, tif in enumerate(tifs):\n",
-    "        \n",
-    "        # always the same for this data set\n",
-    "        band_names = \"surface_temp_anomalies\"\n",
     "        \n",
     "        # read time_start from the file name\n",
     "        # [-15:-5] is derived from the file name convention\n",
@@ -309,8 +306,8 @@
     "            \"gee_props\":{\n",
     "                \"imageCollection\":cloud_props[\"imageCollection\"],\n",
     "                \"gee_asset_name\": \"users/resourcewatch/\" + cloud_props[\"imageCollection\"] + \"/\" + assetName,\n",
-    "                \"band_names\":band_names,\n",
-    "                \"nodata_value\":nodata_val,\n",
+    "                \"band_names\":asset_props[\"band_names\"],\n",
+    "                \"nodata_value\":asset_props[\"nodata_val\"],\n",
     "                \"time_start\":str(int(time_start)),\n",
     "                \"time_end\":str(int(time_end))\n",
     "            }\n",
@@ -397,6 +394,7 @@
     "    time_var_name = 'time'\n",
     "    data_var_name = 'tempanomaly'\n",
     "    nodata_val = str(nc[data_var_name].getncattr(\"_FillValue\"))\n",
+    "    band_names = \"surface_temp_anomalies\"\n",
     "    \n",
     "    # Populate the tmpTifFolder will all files to process\n",
     "    tifFileName_stub = \"cli_035_surface_temp_analysis_\"\n",
@@ -415,7 +413,11 @@
     "        \"imageCollection\": \"cli_035_surface_temp_analysis\",\n",
     "        \"gs_bucket\": \"resource-watch-public\"\n",
     "    }\n",
-    "    process_tif_files_to_cloud(tmpTifFolder, cloud_props, nodata_val)\n",
+    "    asset_props = {\n",
+    "        \"nodata_val\":nodata_val,\n",
+    "        \"band_names\":band_names\n",
+    "    }\n",
+    "    process_tif_files_to_cloud(tmpTifFolder, cloud_props, asset_props)\n",
     "    \n",
     "    # Clean up before exit\n",
     "    #cleanUp(tmpDataFolder)\n",
